--- a/crm/i18n/hu.po
+++ b/crm/i18n/hu.po
@@ -7,22 +7,22 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0dev\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-05-09 10:18+0000\n"
-"PO-Revision-Date: 2013-03-18 00:00+0000\n"
+"PO-Revision-Date: 2013-07-09 07:55+0000\n"
 "Last-Translator: krnkris <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-19 05:56+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-07-10 05:40+0000\n"
+"X-Generator: Launchpad (build 16696)\n"
 
 #. module: crm
 #: view:crm.lead.report:0
 msgid "# Leads"
-msgstr "Érdeklődők száma"
+msgstr "# Érdeklődések"
 
 #. module: crm
-#: code:addons/crm/crm_lead.py:881
+#: code:addons/crm/crm_lead.py:898
 #: selection:crm.case.stage,type:0
 #: view:crm.lead:0
 #: selection:crm.lead,type:0
@@ -183,10 +183,11 @@ msgstr "Lehetőségek keresése"
 msgid ""
 "Opportunity must have Partner assigned before merging with other Opportunity."
 msgstr ""
+"Csak a Partnerhez rendelt Lehetőséget lehet más Lehetőséggel összefűzni."
 
 #. module: crm
-#: code:addons/crm/crm_lead.py:624
-#: code:addons/crm/crm_lead.py:744
+#: code:addons/crm/crm_lead.py:640
+#: code:addons/crm/crm_lead.py:761
 #: code:addons/crm/crm_phonecall.py:280
 #, python-format
 msgid "Warning!"
@@ -228,7 +229,7 @@ msgstr "Egyéb hívások ütemezése"
 #. module: crm
 #: help:crm.meeting,edit_all:0
 msgid "Edit all Occurrences  of recurrent Meeting."
-msgstr ""
+msgstr "Az ismétlődő találkozók összes eseményének szerkesztése."
 
 #. module: crm
 #: code:addons/crm/crm_phonecall.py:209
@@ -246,7 +247,7 @@ msgstr "Kilép"
 #: code:addons/crm/crm_lead.py:323
 #, python-format
 msgid "The opportunity '%s' has been marked as lost."
-msgstr ""
+msgstr "A '%s' lehetőséget elvesztettnek jelöltem."
 
 #. module: crm
 #: model:ir.actions.act_window,help:crm.action_report_crm_lead
@@ -256,6 +257,10 @@ msgid ""
 "sort out your leads analysis by different groups to get accurate grained "
 "analysis."
 msgstr ""
+"Az érdeklődések elemzése több CRM-hez kapcsolódó információt nyújt. "
+"Ellenőrizhetjük az eljárás elnapolását, a kiküldött válaszok és e-mailek "
+"számát. A részletes eredmény érdekében az érdeklődéseket különféle "
+"csoportosítások szerint is elemezhetjük."
 
 #. module: crm
 #: view:crm.lead:0
@@ -779,7 +784,7 @@ msgid "Statistics Dashboard"
 msgstr "Statisztika vezérlőpult"
 
 #. module: crm
-#: code:addons/crm/crm_lead.py:861
+#: code:addons/crm/crm_lead.py:878
 #: model:crm.case.stage,name:crm.stage_lead2
 #: selection:crm.case.stage,type:0
 #: view:crm.lead:0
@@ -1400,7 +1405,9 @@ msgid "Days to Close"
 msgstr "Lezárásig hátralévő napok"
 
 #. module: crm
+#: code:addons/crm/crm_lead.py:1057
 #: field:crm.case.section,complete_name:0
+#, python-format
 msgid "unknown"
 msgstr "Ismeretlen"
 
@@ -2233,7 +2240,6 @@ msgid "Global CC"
 msgstr "Globális CC /másolat/"
 
 #. module: crm
-#: view:crm.lead:0
 #: view:crm.phonecall:0
 #: model:ir.actions.act_window,name:crm.crm_case_categ_phone0
 #: model:ir.ui.menu,name:crm.menu_crm_case_phone
@@ -2944,7 +2950,7 @@ msgstr "Siker mértéke  (%)"
 #: selection:crm.lead,state:0
 #: view:crm.lead.report:0
 msgid "New"
-msgstr "új"
+msgstr "Új"
 
 #. module: crm
 #: view:crm.meeting:0
@@ -3089,7 +3095,7 @@ msgstr "Napi"
 #. module: crm
 #: model:crm.case.stage,name:crm.stage_lead3
 msgid "Qualification"
-msgstr "Végzettség"
+msgstr "Besorolás"
 
 #. module: crm
 #: view:crm.case.stage:0
@@ -3554,7 +3560,7 @@ msgid "Working Hours"
 msgstr "Munkaórák"
 
 #. module: crm
-#: code:addons/crm/crm_lead.py:968
+#: code:addons/crm/crm_lead.py:986
 #: view:crm.lead:0
 #: field:crm.lead2opportunity.partner,partner_id:0
 #: field:crm.lead2opportunity.partner.mass,partner_id:0
