--- a/fleet/i18n/zh_CN.po
+++ b/fleet/i18n/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-07-11 07:28+0000\n"
+"PO-Revision-Date: 2013-07-13 06:55+0000\n"
 "Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-12 06:34+0000\n"
+"X-Launchpad-Export-Date: 2013-07-14 05:59+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 
 #. module: fleet
@@ -482,7 +482,7 @@ msgstr "车辆服务日志"
 #: model:ir.actions.act_window,name:fleet.fleet_vehicle_log_fuel_act
 #: model:ir.ui.menu,name:fleet.fleet_vehicle_log_fuel_menu
 msgid "Vehicles Fuel Logs"
-msgstr "车辆的加油日志"
+msgstr "车辆加油记录"
 
 #. module: fleet
 #: view:fleet.vehicle.model.brand:0
