--- a/product_margin/i18n/fr.po
+++ b/product_margin/i18n/fr.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-05-21 16:12+0000\n"
-"Last-Translator: Quentin THEURET <Unknown>\n"
+"PO-Revision-Date: 2013-07-14 00:28+0000\n"
+"Last-Translator: Maxime Chambreuil (http://www.savoirfairelinux.com) "
+"<maxime.chambreuil@savoirfairelinux.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:16+0000\n"
+"X-Launchpad-Export-Date: 2013-07-14 05:59+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 
 #. module: product_margin
@@ -54,7 +55,7 @@ msgstr "Chiffre d'affaires - Prix standard"
 #. module: product_margin
 #: field:product.product,total_margin_rate:0
 msgid "Total Margin Rate(%)"
-msgstr ""
+msgstr "Taux de marge totale (%)"
 
 #. module: product_margin
 #: selection:product.margin,invoice_state:0
