Launchpad automatic translations update.

--- a/account/i18n/nl.po
+++ b/account/i18n/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-07-10 10:44+0000\n"
+"PO-Revision-Date: 2013-07-16 08:55+0000\n"
 "Last-Translator: Erwin van der Ploeg (Endian Solutions) <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 05:39+0000\n"
+"X-Launchpad-Export-Date: 2013-07-17 07:24+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 
 #. module: account
@@ -5133,7 +5133,7 @@ msgstr ""
 #: code:addons/account/report/common_report_header.py:68
 #, python-format
 msgid "All Posted Entries"
-msgstr "Alle mutaties"
+msgstr "Alle geboekte boekingen"
 
 #. module: account
 #: field:report.aged.receivable,name:0
@@ -5864,7 +5864,7 @@ msgstr "Kostenplaats balans -"
 #: field:account.vat.declaration,target_move:0
 #: field:accounting.report,target_move:0
 msgid "Target Moves"
-msgstr "Doelrekening"
+msgstr "Welke boekingen"
 
 #. module: account
 #: code:addons/account/account.py:1454
