--- a/account/i18n/ar.po
+++ b/account/i18n/ar.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-07-04 23:20+0000\n"
-"Last-Translator: Haytham sobhan <ataher2002@gmail.com>\n"
+"PO-Revision-Date: 2013-07-15 22:30+0000\n"
+"Last-Translator: Emad Sherbini <emad@estc.com.sa>\n"
 "Language-Team: Arabic <ar@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 05:38+0000\n"
+"X-Launchpad-Export-Date: 2013-07-17 07:24+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 
 #. module: account
@@ -40,7 +40,7 @@ msgstr ""
 #. module: account
 #: view:res.partner:0
 msgid "the parent company"
-msgstr ""
+msgstr "الشركة الأم"
 
 #. module: account
 #: view:account.move.reconcile:0
