--- a/account/i18n/pl.po
+++ b/account/i18n/pl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-06-20 13:17+0000\n"
-"Last-Translator: Grzegorz Grzelak (OpenGLOBE.pl) <grzegorz@openglobe.pl>\n"
+"PO-Revision-Date: 2013-07-17 10:37+0000\n"
+"Last-Translator: Dariusz Kubiak <d.kubiak@macopedia.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 05:42+0000\n"
+"X-Launchpad-Export-Date: 2013-07-18 07:14+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 
 #. module: account
@@ -204,7 +204,7 @@ msgstr "Etykieta kolumny"
 #. module: account
 #: help:account.config.settings,code_digits:0
 msgid "No. of digits to use for account code"
-msgstr "Liczba cyfr do generacji kodu konta"
+msgstr ""
 
 #. module: account
 #: help:account.analytic.journal,type:0
@@ -10455,7 +10455,7 @@ msgstr "Okres początkowy musi poprzedzać końcowy."
 #: field:account.invoice,number:0
 #: field:account.move,name:0
 msgid "Number"
-msgstr "Liczba"
+msgstr "Numer"
 
 #. module: account
 #: report:account.analytic.account.journal:0
