Launchpad automatic translations update.

--- a/account_analytic_analysis/i18n/pt_BR.po
+++ b/account_analytic_analysis/i18n/pt_BR.po
@@ -8,14 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-07-06 22:18+0000\n"
-"Last-Translator: Fábio Martinelli - http://zupy.com.br "
-"<webmaster@guaru.net>\n"
+"PO-Revision-Date: 2013-07-18 19:35+0000\n"
+"Last-Translator: Claudio de Araujo Santos <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 05:46+0000\n"
+"X-Launchpad-Export-Date: 2013-07-19 06:35+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 
 #. module: account_analytic_analysis
@@ -302,6 +301,8 @@ msgid ""
 "{'required': [('type','=','contract'),'|',('fix_price_invoices','=',True), "
 "('invoice_on_timesheets', '=', True)]}"
 msgstr ""
+"{'Required': [('type', '=', 'contrato'), '|', ('fix_price_invoices', '=', "
+"True), ('invoice_on_timesheets', '=', True)]}"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
