--- a/mrp/i18n/fr.po
+++ b/mrp/i18n/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-07-13 22:52+0000\n"
-"Last-Translator: Gilles Major (OpenERP) <gim@openerp.com>\n"
+"PO-Revision-Date: 2013-07-18 13:49+0000\n"
+"Last-Translator: WANTELLET Sylvain <Swantellet@tetra-info.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-14 05:59+0000\n"
+"X-Launchpad-Export-Date: 2013-07-19 06:36+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 
 #. module: mrp
@@ -556,7 +556,7 @@ msgstr "Ordre de fabrication <em>%s</em> créé."
 #: view:mrp.bom:0
 #: report:mrp.production.order:0
 msgid "Bill Of Material"
-msgstr "Nomemclature"
+msgstr "Nomenclature"
 
 #. module: mrp
 #: help:mrp.routing,location_id:0
@@ -653,7 +653,7 @@ msgstr "Valeur du stock"
 #. module: mrp
 #: model:ir.actions.act_window,name:mrp.action_product_bom_structure
 msgid "Product BoM Structure"
-msgstr "Structure de la nomemclature"
+msgstr "Structure de la nomenclature"
 
 #. module: mrp
 #: view:mrp.production:0
@@ -1568,7 +1568,7 @@ msgstr "Rechercher un poste de charge MRP"
 #. module: mrp
 #: view:mrp.bom:0
 msgid "BoM Structure"
-msgstr "Structure de la nomemclature"
+msgstr "Structure de la nomenclature"
 
 #. module: mrp
 #: field:mrp.production,date_start:0
