--- a/account_reporting/i18n/pt_BR.po
+++ b/account_reporting/i18n/pt_BR.po
@@ -7,19 +7,19 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0dev\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2010-10-18 17:46+0000\n"
-"PO-Revision-Date: 2011-02-23 15:45+0000\n"
-"Last-Translator: mga (Open ERP) <Unknown>\n"
+"PO-Revision-Date: 2013-07-19 16:32+0000\n"
+"Last-Translator: Claudio de Araujo Santos <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-06-27 05:51+0000\n"
-"X-Generator: Launchpad (build 16681)\n"
+"X-Launchpad-Export-Date: 2013-07-20 05:49+0000\n"
+"X-Generator: Launchpad (build 16696)\n"
 
 #. module: account_reporting
 #: model:ir.model,name:account_reporting.model_color_rml
 msgid "Rml Color"
-msgstr ""
+msgstr "RML Cor"
 
 #. module: account_reporting
 #: field:color.rml,code:0
@@ -63,12 +63,12 @@ msgstr "Balanço"
 #. module: account_reporting
 #: constraint:ir.ui.menu:0
 msgid "Error ! You can not create recursive Menu."
-msgstr ""
+msgstr "Erro! Você não pode criar menus recursiva."
 
 #. module: account_reporting
 #: view:account.reporting.balance.report:0
 msgid "Print"
-msgstr ""
+msgstr "Imprimir"
 
 #. module: account_reporting
 #: constraint:ir.actions.act_window:0
@@ -193,7 +193,7 @@ msgstr "Conta-pai"
 #. module: account_reporting
 #: view:account.reporting.balance.report:0
 msgid "Select Dates Period"
-msgstr ""
+msgstr "Selecione datas Período"
 
 #. module: account_reporting
 #: field:account.report.bs,sequence:0
@@ -211,6 +211,8 @@ msgid ""
 "Gives the sequence order when displaying a list of account reporting for "
 "balance sheet."
 msgstr ""
+"Dá a ordem de seqüência ao exibir uma lista de conta de relatórios para "
+"balanço."
 
 #. module: account_reporting
 #: view:account.report.bs:0
@@ -257,7 +259,7 @@ msgstr "Helvetica-Oblique"
 #. module: account_reporting
 #: model:ir.model,name:account_reporting.model_account_reporting_balance_report
 msgid "Account balance report"
-msgstr ""
+msgstr "Relatório saldo da conta"
 
 #. module: account_reporting
 #: field:account.report.bs,child_id:0
