--- a/account_voucher_payment/i18n/pt_BR.po
+++ b/account_voucher_payment/i18n/pt_BR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-05-13 20:11+0000\n"
-"PO-Revision-Date: 2010-07-29 12:06+0000\n"
-"Last-Translator: OpenERP Administrators <Unknown>\n"
+"PO-Revision-Date: 2013-07-19 16:27+0000\n"
+"Last-Translator: Claudio de Araujo Santos <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-06-27 05:50+0000\n"
-"X-Generator: Launchpad (build 16681)\n"
+"X-Launchpad-Export-Date: 2013-07-20 05:49+0000\n"
+"X-Generator: Launchpad (build 16696)\n"
 
 #. module: account_voucher_payment
 #: constraint:ir.ui.view:0
@@ -35,6 +35,10 @@ msgid ""
 "    Accounting Vouchers\n"
 "    "
 msgstr ""
+"Este módulo inclui:\n"
+"    * É conciliar a fatura (fornecedor, cliente), pagando através de \n"
+"    Vouchers de Contabilidade\n"
+"    "
 
 #. module: account_voucher_payment
 #: wizard_view:account.voucher.unreconcile,init:0
@@ -55,7 +59,7 @@ msgstr "Linhas de Comprovantes"
 #. module: account_voucher_payment
 #: model:ir.module.module,shortdesc:account_voucher_payment.module_name_translation
 msgid "Invoice Payment/Receipt by Vouchers."
-msgstr ""
+msgstr "Pagamento / recebimento por Vouchers fatura."
 
 #. module: account_voucher_payment
 #: model:ir.actions.wizard,name:account_voucher_payment.wizard_unreconcile_voucher
