--- a/edi/i18n/pt_BR.po
+++ b/edi/i18n/pt_BR.po
@@ -8,62 +8,64 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-11-25 14:49+0000\n"
-"PO-Revision-Date: 2012-02-13 17:10+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-07-19 19:00+0000\n"
+"Last-Translator: Claudio de Araujo Santos <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-06-27 05:47+0000\n"
-"X-Generator: Launchpad (build 16681)\n"
+"X-Launchpad-Export-Date: 2013-07-20 05:49+0000\n"
+"X-Generator: Launchpad (build 16696)\n"
 
 #. module: edi
 #: model:ir.module.module,shortdesc:edi.module_meta_information
 msgid "EDI"
-msgstr ""
+msgstr "EDI"
 
 #. module: edi
 #: constraint:ir.model:0
 msgid ""
 "The Object name must start with x_ and not contain any special character !"
 msgstr ""
+"O nome do objeto deve iniciar com x_ e não conter qualquer caractere "
+"especial!"
 
 #. module: edi
 #: model:res.request.link,name:edi.edi_request
 msgid "EDI Log"
-msgstr ""
+msgstr "Log de EDI"
 
 #. module: edi
 #: wizard_field:edi.import,init,current:0
 msgid "Current"
-msgstr ""
+msgstr "Atual"
 
 #. module: edi
 #: wizard_view:edi.export,export:0
 msgid "EDI file exported"
-msgstr ""
+msgstr "Arquivo EDI EXPORTADO"
 
 #. module: edi
 #: constraint:ir.actions.act_window:0
 msgid "Invalid model name in the action definition."
-msgstr ""
+msgstr "Nome do modelo inválido na definição da ação."
 
 #. module: edi
 #: model:product.pricelist.type,name:edi.pricelist_type_sale
 #: field:res.partner,property_product_pricelist_customer:0
 #: field:sale.order,customer_pricelist_id:0
 msgid "Customer Pricelist"
-msgstr ""
+msgstr "Lista de Preços do Cliente"
 
 #. module: edi
 #: field:edi.log.line,log_id:0
 msgid "Log Ref"
-msgstr ""
+msgstr "Entrar Ref"
 
 #. module: edi
 #: wizard_button:edi.export,init,export:0
 msgid "Export Sales"
-msgstr ""
+msgstr "Vendas de Exportação"
 
 #. module: edi
 #: model:ir.model,name:edi.model_res_partner
@@ -74,7 +76,7 @@ msgstr "Parceiro"
 #: wizard_button:edi.import,check,end:0
 #: wizard_button:edi.import,do_import,end:0
 msgid "end"
-msgstr ""
+msgstr "end"
 
 #. openerp-web
 #: /home/odo/repositories/addons/trunk/edi/static/src/xml/edi_account.xml:37
@@ -84,38 +86,38 @@ msgstr "Descrição"
 #. module: edi
 #: field:edi.log,log_line:0
 msgid "Log Lines"
-msgstr ""
+msgstr "Linhas do Log"
 
 #. module: edi
 #: model:ir.model,name:edi.model_edi_log
 msgid "EDI log"
-msgstr ""
+msgstr "Log EDI"
 
 #. module: edi
 #: field:edi.log.line,timestamp:0
 msgid "Order date"
-msgstr ""
+msgstr "Data do Pedido"
 
 #. module: edi
 #: wizard_field:edi.export,init,ediexportdir:0
 #: wizard_field:edi.import,init,ediimportdir:0
 msgid "EDI Import Dir"
-msgstr ""
+msgstr "EDI Import Dir"
 
 #. module: edi
 #: constraint:ir.ui.view:0
 msgid "Invalid XML for View Architecture!"
-msgstr ""
+msgstr "Inválido XML para Ver Arquitetura!"
 
 #. module: edi
 #: wizard_button:edi.export,export,end:0
 msgid "Ok"
-msgstr ""
+msgstr "Ok"
 
 #. module: edi
 #: field:edi.log.line,name:0
 msgid "Name"
-msgstr ""
+msgstr "Name"
 
 #. module: edi
 #: model:ir.module.module,description:edi.module_meta_information
@@ -124,95 +126,98 @@ msgid ""
 "the food industries process, communicating with SAP. This module is able to "
 "import order and export delivery notes."
 msgstr ""
+"Utilizado para a comunicação com os outros proprietários de ERP. Foi testado "
+"no processo de indústrias alimentares, comunicando com a SAP. Este módulo é "
+"capaz de importar e exportar ordem notas de entrega."
 
 #. module: edi
 #: model:ir.actions.wizard,name:edi.wizard_edi_import
 msgid "Import EDI Sales"
-msgstr ""
+msgstr "Importar Vendas EDI"
 
 #. module: edi
 #: view:edi.log:0
 msgid "EDI Logs"
-msgstr ""
+msgstr "Logs de EDI"
 
 #. module: edi
 #: field:sale.order.line,price_unit_customer:0
 msgid "Customer Unit Price"
-msgstr ""
+msgstr "Cliente Preço unitário"
 
 #. module: edi
 #: wizard_view:edi.import,check:0
 #: wizard_view:edi.import,do_import:0
 msgid "EDI file imported"
-msgstr ""
+msgstr "Arquivo EDI importados"
 
 #. module: edi
 #: wizard_field:edi.import,init,error:0
 msgid "Error"
-msgstr ""
+msgstr "Error"
 
 #. module: edi
 #: model:ir.actions.wizard,name:edi.wizard_edi_export
 msgid "Export EDI Sales"
-msgstr ""
+msgstr "Exportar EDI Vendas"
 
 #. module: edi
 #: field:edi.log,name:0
 msgid "Log name"
-msgstr ""
+msgstr "Acesse nome"
 
 #. module: edi
 #: wizard_view:edi.import,init:0
 msgid "EDI file import"
-msgstr ""
+msgstr "Importação de arquivo EDI"
 
 #. module: edi
 #: field:edi.log.line,order_num:0
 msgid "Edi Order Id"
-msgstr ""
+msgstr "Edi Id Ordem"
 
 #. module: edi
 #: wizard_view:edi.import,init:0
 msgid "Import the following files"
-msgstr ""
+msgstr "Importe os seguintes arquivos"
 
 #. module: edi
 #: model:ir.ui.menu,name:edi.menu_edi_log
 msgid "View Logs"
-msgstr ""
+msgstr "Ver Logs"
 
 #. module: edi
 #: model:ir.ui.menu,name:edi.menu_edi_id
 msgid "Edi"
-msgstr ""
+msgstr "Edi"
 
 #. module: edi
 #: model:ir.model,name:edi.model_edi_log_line
 msgid "EDI Log Line"
-msgstr ""
+msgstr "Linha Log EDI"
 
 #. module: edi
 #: wizard_view:edi.export,init:0
 msgid "Export to the following directory"
-msgstr ""
+msgstr "Exportar para o seguinte diretório"
 
 #. module: edi
 #: wizard_view:edi.export,init:0
 msgid "Not Implemented!"
-msgstr ""
+msgstr "Não implementado!"
 
 #. module: edi
 #: wizard_view:edi.export,init:0
 msgid "EDI file export"
-msgstr ""
+msgstr "Arquivo de exportação EDI"
 
 #. module: edi
 #: wizard_button:edi.export,init,end:0
 #: wizard_button:edi.import,init,end:0
 msgid "Cancel"
-msgstr ""
+msgstr "Cancel"
 
 #. module: edi
 #: wizard_button:edi.import,init,check:0
 msgid "Check EDI"
-msgstr ""
+msgstr "Verifique EDI"
