--- a/flagey/i18n/pt_BR.po
+++ b/flagey/i18n/pt_BR.po
@@ -1,14 +1,14 @@
 # Brazilian Portuguese translation for openobject-addons
-# Copyright (c) 2010 Rosetta Contributors and Canonical Ltd 2010
+# Copyright (c) 2013 Rosetta Contributors and Canonical Ltd 2013
 # This file is distributed under the same license as the openobject-addons package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2013.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2009-02-06 13:58+0000\n"
-"PO-Revision-Date: 2013-07-19 15:48+0000\n"
+"POT-Creation-Date: 2009-11-25 14:42+0000\n"
+"PO-Revision-Date: 2013-07-19 18:16+0000\n"
 "Last-Translator: Claudio de Araujo Santos <Unknown>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,12 @@ msgstr ""
 "X-Launchpad-Export-Date: 2013-07-20 05:49+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 
-#. module: dm
-#: model:ir.module.module,shortdesc:dm.module_meta_information
-msgid "Direct Marketing"
-msgstr "Marketing Direto"
+#. module: flagey
+#: model:ir.actions.report.xml,name:flagey.report_flagey_fiches
+msgid "Fiches Lots"
+msgstr "Muitas fichas"
+
+#. module: flagey
+#: model:ir.module.module,shortdesc:flagey.module_meta_information
+msgid "Auction module - Flagey Customs"
+msgstr "Módulo Leilão - Flagey Alfândega"
