Launchpad automatic translations update.

--- a/base_calendar/i18n/zh_CN.po
+++ b/base_calendar/i18n/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-07-13 07:27+0000\n"
-"Last-Translator: Xinwen Li <lixw029@163.com>\n"
+"PO-Revision-Date: 2013-07-19 16:03+0000\n"
+"Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-14 05:58+0000\n"
+"X-Launchpad-Export-Date: 2013-07-20 06:23+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 
 #. module: base_calendar
@@ -1175,6 +1175,12 @@ msgid ""
 "          </p>\n"
 "        "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"            单击 安排一个新的会议\n"
+"          </p><p>\n"
+"           日历在雇员和完全集成的其它应用（比如员工假期或者商机）间共享\n"
+"          </p>\n"
+"        "
 
 #. module: base_calendar
 #: help:calendar.alarm,description:0
@@ -1354,6 +1360,12 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                单击可设置一个新的警报类型。\n"
+"              </p><p>\n"
+"                您能定义一个个性化的日历警报类型，可以被指定给日历事件或者一次会面.\n"
+"              </p>\n"
+"            "
 
 #. module: base_calendar
 #: selection:crm.meeting,state:0
