--- a/portal_claim/i18n/pt_BR.po
+++ b/portal_claim/i18n/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-07-19 19:18+0000\n"
-"Last-Translator: Claudio de Araujo Santos <Unknown>\n"
+"PO-Revision-Date: 2013-07-21 19:33+0000\n"
+"Last-Translator: Claudio de Araujo Santos <claudioaraujosantos@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-20 06:23+0000\n"
+"X-Launchpad-Export-Date: 2013-07-22 05:59+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 
 #. module: portal_claim
@@ -31,8 +31,8 @@ msgstr ""
 "<p class=\"oe_view_nocontent_create\">\n"
 "                Clique para registrar uma nova reclamação. \n"
 "              </ P>\n"
-"                Você pode acompanhar suas reivindicações a partir deste menu "
-"e as ações que\n"
+"                Você pode acompanhar suas reclamações a partir deste menu e "
+"as ações que\n"
 "                vai demorar.\n"
 "              </ P>\n"
 "            "
