--- a/sale/i18n/tr.po
+++ b/sale/i18n/tr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-06-22 13:56+0000\n"
-"Last-Translator: Ayhan KIZILTAN <Unknown>\n"
+"PO-Revision-Date: 2013-07-21 14:33+0000\n"
+"Last-Translator: Ediz Duman <neps1192@gmail.com>\n"
 "Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:21+0000\n"
+"X-Launchpad-Export-Date: 2013-07-22 05:59+0000\n"
 "X-Generator: Launchpad (build 16696)\n"
 
 #. module: sale
@@ -1640,23 +1640,23 @@ msgstr ""
 "    <p>Sayın ${object.partner_id.name},</p>\n"
 "    \n"
 "    <p>Firmamız ${object.company_id.name}nden istemiş olduğunuz "
-"${object.state in ('draft', 'sent') and 'quotation' or 'order confirmation'} "
+"${object.state in ('draft', 'sent') and 'teklif' or 'Sipariş doğrulama'} "
 "aşağıdadır: </p>\n"
 "\n"
 "    <p style=\"border-left: 1px solid #8e0000; margin-left: 30px;\">\n"
 "       &nbsp;&nbsp;<strong>REFERANS</strong><br />\n"
-"       &nbsp;&nbsp;Sipariş numarası: <strong>${object.name}</strong><br />\n"
-"       &nbsp;&nbsp;Sipariş toplamı: <strong>${object.amount_total} "
+"       &nbsp;&nbsp;Sipariş Numarası: <strong>${object.name}</strong><br />\n"
+"       &nbsp;&nbsp;Sipariş Toplamı: <strong>${object.amount_total} "
 "${object.pricelist_id.currency_id.name}</strong><br />\n"
-"       &nbsp;&nbsp;Sipariş tarihi: ${object.date_order}<br />\n"
+"       &nbsp;&nbsp;Sipariş Tarihi: ${object.date_order}<br />\n"
 "       % if object.origin:\n"
-"       &nbsp;&nbsp;Sipariş referansı: ${object.origin}<br />\n"
+"       &nbsp;&nbsp;Sipariş Referansı: ${object.origin}<br />\n"
 "       % endif\n"
 "       % if object.client_order_ref:\n"
 "       &nbsp;&nbsp;Referansınız: ${object.client_order_ref}<br />\n"
 "       % endif\n"
 "       % if object.user_id:\n"
-"       &nbsp;&nbsp;İlgiliniz: <a href=\"mailto:${object.user_id.email or "
+"       &nbsp;&nbsp;İlgili : <a href=\"mailto:${object.user_id.email or "
 "''}?subject=Order%20${object.name}\">${object.user_id.name}</a>\n"
 "       % endif\n"
 "    </p>\n"
