--- a/crm_partner_assign/i18n/zh_CN.po
+++ b/crm_partner_assign/i18n/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-12-21 17:05+0000\n"
-"PO-Revision-Date: 2012-12-14 13:50+0000\n"
-"Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
+"PO-Revision-Date: 2013-07-23 03:45+0000\n"
+"Last-Translator: fanvil <fanvil@hotmail.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-03-16 05:47+0000\n"
-"X-Generator: Launchpad (build 16532)\n"
+"X-Launchpad-Export-Date: 2013-07-23 05:01+0000\n"
+"X-Generator: Launchpad (build 16700)\n"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,delay_close:0
@@ -37,7 +37,7 @@ msgstr "计划收入"
 msgid ""
 "Message type: email for email message, notification for system message, "
 "comment for other messages such as user replies"
-msgstr ""
+msgstr "消息类型：Email 用于 邮件消息， 通知用户系统消息，评论用于其他消息，例如用户回复。"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,nbr:0
@@ -53,7 +53,7 @@ msgstr "分组..."
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,body:0
 msgid "Automatically sanitized HTML contents"
-msgstr ""
+msgstr "自动整理HTML内容"
 
 #. module: crm_partner_assign
 #: view:crm.lead:0
@@ -68,7 +68,7 @@ msgstr "geolocalization定位"
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,starred:0
 msgid "Starred"
-msgstr ""
+msgstr "加星号的邮件"
 
 #. module: crm_partner_assign
 #: view:crm.lead.forward.to.partner:0
@@ -80,7 +80,7 @@ msgstr "正文"
 msgid ""
 "Email address of the sender. This field is set when no matching partner is "
 "found for incoming emails."
-msgstr ""
+msgstr "发送者的Email地址。当收取的email没有对应的合作伙伴时，此字段被设置"
 
 #. module: crm_partner_assign
 #: view:crm.partner.report.assign:0
@@ -111,7 +111,7 @@ msgstr "公司"
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,notification_ids:0
 msgid "Notifications"
-msgstr ""
+msgstr "通知"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,date_assign:0
@@ -123,7 +123,7 @@ msgstr "业务伙伴日期"
 #: view:crm.partner.report.assign:0
 #: view:res.partner:0
 msgid "Salesperson"
-msgstr ""
+msgstr "销售员"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,priority:0
@@ -170,7 +170,7 @@ msgstr "指派的geolocalization"
 #. module: crm_partner_assign
 #: model:ir.model,name:crm_partner_assign.model_crm_lead_forward_to_partner
 msgid "Email composition wizard"
-msgstr ""
+msgstr "Email撰写向导"
 
 #. module: crm_partner_assign
 #: field:crm.partner.report.assign,turnover:0
@@ -192,7 +192,7 @@ msgstr "为线索指定一个业务伙伴的概率（0表示没指派）"
 #. module: crm_partner_assign
 #: view:res.partner:0
 msgid "Partner Activation"
-msgstr ""
+msgstr "激活合作伙伴"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.forward.to.partner,type:0
@@ -203,7 +203,7 @@ msgstr "系统通知"
 #: code:addons/crm_partner_assign/wizard/crm_forward_to_partner.py:74
 #, python-format
 msgid "Lead forward"
-msgstr ""
+msgstr "转发的线索"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,probability:0
@@ -284,7 +284,7 @@ msgstr "最低"
 #. module: crm_partner_assign
 #: view:crm.partner.report.assign:0
 msgid "Date Invoice"
-msgstr ""
+msgstr "发票排程"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,template_id:0
@@ -309,7 +309,7 @@ msgstr "创建日期"
 #. module: crm_partner_assign
 #: model:ir.model,name:crm_partner_assign.model_res_partner_activation
 msgid "res.partner.activation"
-msgstr ""
+msgstr "res.partner.activation"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,parent_id:0
@@ -344,7 +344,7 @@ msgstr "7月"
 #. module: crm_partner_assign
 #: view:crm.partner.report.assign:0
 msgid "Date Review"
-msgstr ""
+msgstr "回顾排程"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -356,12 +356,12 @@ msgstr "阶段"
 #: view:crm.lead.report.assign:0
 #: field:crm.lead.report.assign,state:0
 msgid "Status"
-msgstr ""
+msgstr "状态"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,to_read:0
 msgid "To read"
-msgstr ""
+msgstr "查看"
 
 #. module: crm_partner_assign
 #: code:addons/crm_partner_assign/wizard/crm_forward_to_partner.py:74
@@ -416,12 +416,12 @@ msgstr "到期天数"
 #: help:crm.lead.forward.to.partner,notified_partner_ids:0
 msgid ""
 "Partners that have a notification pushing this message in their mailboxes"
-msgstr ""
+msgstr "推送此通知消息进他们邮箱的合作伙伴"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.forward.to.partner,type:0
 msgid "Comment"
-msgstr ""
+msgstr "评论"
 
 #. module: crm_partner_assign
 #: field:res.partner,partner_weight:0
@@ -449,7 +449,7 @@ msgstr "12月"
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,vote_user_ids:0
 msgid "Users that voted for this message"
-msgstr ""
+msgstr "投票给这条消息的用户"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -465,7 +465,7 @@ msgstr "开启日期"
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,child_ids:0
 msgid "Child Messages"
-msgstr ""
+msgstr "子信息"
 
 #. module: crm_partner_assign
 #: field:crm.partner.report.assign,date_review:0
