Launchpad automatic translations update.

--- a/mail/i18n/zh_CN.po
+++ b/mail/i18n/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-06-24 10:33+0000\n"
+"PO-Revision-Date: 2013-07-22 13:11+0000\n"
 "Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:08+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-07-23 05:33+0000\n"
+"X-Generator: Launchpad (build 16700)\n"
 
 #. module: mail
 #: view:mail.followers:0
@@ -1653,7 +1653,7 @@ msgstr "附加一个笔记，将不会被发送给下列关注者"
 #: code:addons/mail/static/src/xml/mail.xml:279
 #, python-format
 msgid "nobody"
-msgstr ""
+msgstr "无"
 
 #. module: mail
 #: selection:res.partner,notification_email_send:0
