--- a/mrp/i18n/zh_CN.po
+++ b/mrp/i18n/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2012-12-21 23:00+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-07-22 13:01+0000\n"
+"Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:10+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-07-23 05:33+0000\n"
+"X-Generator: Launchpad (build 16700)\n"
 
 #. module: mrp
 #: help:mrp.config.settings,module_mrp_repair:0
@@ -200,7 +200,7 @@ msgstr "用于外购的物料"
 #. module: mrp
 #: model:ir.ui.menu,name:mrp.menu_mrp_production_order_action
 msgid "Order Planning"
-msgstr ""
+msgstr "制造单计划"
 
 #. module: mrp
 #: field:mrp.config.settings,module_mrp_operations:0
@@ -287,7 +287,7 @@ msgstr "从一个生产订单生产几个产品"
 msgid ""
 "The selection of the right Bill of Material to use will depend on the "
 "properties specified on the sales order and the Bill of Material."
-msgstr ""
+msgstr "被正确使用的BOM依赖于销售单和BOM中指定的属性"
 
 #. module: mrp
 #: view:mrp.bom:0
@@ -295,7 +295,7 @@ msgid ""
 "When processing a sales order for this product, the delivery order\n"
 "                                will contain the raw materials, instead of "
 "the finished product."
-msgstr ""
+msgstr "当处理该产品的销售单时，发运单将以原料来替代成品"
 
 #. module: mrp
 #: report:mrp.production.order:0
@@ -1121,7 +1121,7 @@ msgstr "生产订单"
 #. module: mrp
 #: selection:mrp.production,state:0
 msgid "Awaiting Raw Materials"
-msgstr ""
+msgstr "等待原材料"
 
 #. module: mrp
 #: field:mrp.bom,position:0
@@ -1853,7 +1853,7 @@ msgstr "一个周期的时间(小时)"
 #. module: mrp
 #: view:mrp.production:0
 msgid "Cancel Production"
-msgstr ""
+msgstr "取消生产"
 
 #. module: mrp
 #: model:ir.actions.report.xml,name:mrp.report_mrp_production_report
