--- a/crm/i18n/hr.po
+++ b/crm/i18n/hr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-03-14 11:52+0000\n"
-"Last-Translator: Davor Bojkić <bole@dajmi5.com>\n"
+"PO-Revision-Date: 2013-07-22 12:37+0000\n"
+"Last-Translator: Marko Carevic <Unknown>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 05:54+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-07-23 05:33+0000\n"
+"X-Generator: Launchpad (build 16700)\n"
 
 #. module: crm
 #: view:crm.lead.report:0
@@ -28,8 +28,8 @@ msgid ""
 "Allows you to configure your incoming mail server, and create leads from "
 "incoming emails."
 msgstr ""
-"Omogućuje konfiguriranje dolaznoog mail poslužitelja, i kreira potencijalne "
-"prodaje iz dolaznih poruka."
+"Omogućuje konfiguriranje dolaznog mail poslužitelja i kreira potencijalne "
+"kontakte iz dolaznih poruka."
 
 #. module: crm
 #: code:addons/crm/crm_lead.py:898
@@ -40,7 +40,7 @@ msgstr ""
 #: selection:crm.lead.report,type:0
 #, python-format
 msgid "Lead"
-msgstr "Potencijali"
+msgstr "Potencijal"
 
 #. module: crm
 #: view:crm.lead:0
