--- a/lunch/i18n/zh_CN.po
+++ b/lunch/i18n/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2012-12-21 23:00+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-07-22 13:12+0000\n"
+"Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:08+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-07-23 05:33+0000\n"
+"X-Generator: Launchpad (build 16700)\n"
 
 #. module: lunch
 #: field:lunch.product,category_id:0
@@ -137,7 +137,7 @@ msgstr "接收食品"
 #. module: lunch
 #: view:lunch.cashmove:0
 msgid "cashmove form"
-msgstr ""
+msgstr "现金凭证表单"
 
 #. module: lunch
 #: model:ir.actions.act_window,help:lunch.action_lunch_cashmove_form
@@ -179,7 +179,7 @@ msgstr "已取消"
 #. module: lunch
 #: view:lunch.cashmove:0
 msgid "lunch employee payment"
-msgstr ""
+msgstr "午餐员工付款"
 
 #. module: lunch
 #: view:lunch.alert:0
@@ -200,7 +200,7 @@ msgstr "午餐提醒"
 #: code:addons/lunch/lunch.py:183
 #, python-format
 msgid "Select a product and put your order comments on the note."
-msgstr ""
+msgstr "选择一个产品并且把订单注释写在备注中"
 
 #. module: lunch
 #: selection:lunch.alert,alter_type:0
@@ -220,7 +220,7 @@ msgstr "已确认"
 #. module: lunch
 #: view:lunch.order:0
 msgid "lunch orders"
-msgstr ""
+msgstr "午餐订单"
 
 #. module: lunch
 #: view:lunch.order.line:0
@@ -235,7 +235,7 @@ msgstr "您的帐号"
 #. module: lunch
 #: model:ir.ui.menu,name:lunch.menu_lunch_cashmove_form
 msgid "Your Lunch Account"
-msgstr ""
+msgstr "你的午餐账户"
 
 #. module: lunch
 #: field:lunch.alert,active_from:0
@@ -308,7 +308,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:lunch.action_lunch_control_accounts
 #: model:ir.ui.menu,name:lunch.menu_lunch_control_accounts
 msgid "Control Accounts"
-msgstr ""
+msgstr "控制账户"
 
 #. module: lunch
 #: selection:lunch.alert,alter_type:0
@@ -383,6 +383,13 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                单击以创建一个午餐产品。\n"
+"            </p>\n"
+"              <p>\n"
+"                一个产品定义了它的 名称、类别、价格、和供应商。\n"
+"              </p>\n"
+"            "
 
 #. module: lunch
 #: view:lunch.alert:0
@@ -393,7 +400,7 @@ msgstr "消息"
 #. module: lunch
 #: view:lunch.order.order:0
 msgid "Order Meals"
-msgstr ""
+msgstr "订购食品"
 
 #. module: lunch
 #: view:lunch.cancel:0
@@ -428,7 +435,7 @@ msgstr "品种分类"
 #. module: lunch
 #: model:ir.actions.act_window,name:lunch.action_lunch_control_suppliers
 msgid "Control Suppliers"
-msgstr ""
+msgstr "控制供应商"
 
 #. module: lunch
 #: view:lunch.alert:0
@@ -469,7 +476,7 @@ msgstr "取消食品"
 #: model:ir.model,name:lunch.model_lunch_cashmove
 #: view:lunch.cashmove:0
 msgid "lunch cashmove"
-msgstr ""
+msgstr "午餐现金凭证"
 
 #. module: lunch
 #: view:lunch.cancel:0
@@ -612,7 +619,7 @@ msgstr "And"
 #. module: lunch
 #: view:lunch.alert:0
 msgid "Write the message you want to display during the defined period..."
-msgstr ""
+msgstr "写入你要在定义期间时显示的信息。"
 
 #. module: lunch
 #: selection:lunch.order.line,state:0
@@ -745,7 +752,7 @@ msgstr "单价"
 #. module: lunch
 #: view:lunch.cashmove:0
 msgid "By User"
-msgstr ""
+msgstr "根据用户"
 
 #. module: lunch
 #: field:lunch.order.line,product_id:0
@@ -785,7 +792,7 @@ msgstr "新的订单"
 #. module: lunch
 #: view:lunch.cashmove:0
 msgid "cashmove tree"
-msgstr ""
+msgstr "现金凭证树"
 
 #. module: lunch
 #: view:lunch.cancel:0
@@ -795,12 +802,12 @@ msgstr "取消我们不能从供应商出接收的食物。"
 #. module: lunch
 #: view:lunch.cashmove:0
 msgid "My Account grouped"
-msgstr ""
+msgstr "我的账户组"
 
 #. module: lunch
 #: model:ir.ui.menu,name:lunch.menu_lunch_cashmove
 msgid "Employee Payments"
-msgstr ""
+msgstr "员工付款"
 
 #. module: lunch
 #: view:lunch.cashmove:0
